--- a/master/templates/registration/registrar.html
+++ b/master/templates/registration/registrar.html
@@ -2,46 +2,46 @@
 
 {% block content %}
 
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
-        crossorigin="anonymous">
-    <title>Registrar</title>
-</head>
-
-<body>
-    <div class="container">
-        <div class="form">
-            <div class="row justify-content-md-center">
-                <div class="col-md-auto">
-                    <form method="post">
-                        {% csrf_token %} {{ form.as_p }}
-                        <div class="tile-footer">
-                            <div class="row">
-                                <div class="col-md-8 col-md-offset-3">
-                                    <button class="btn btn-primary" type="submit">
-                                        <i class="fa fa-fw fa-lg fa-check-circle"></i>Register</button>&nbsp;&nbsp;
-                                    <a class="btn btn-primary" href="{% url 'login' %}">
-                                        <i class="fa fa-fw fa-lg fa-times-circle"></i>Cancel</a>
+ 
+</head> 
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="well">
+                <form class="form-horizontal" method="post">
+                    <fieldset>
+                        <legend class="text-center header">Registro Usuarios </legend>
+                        <div class="form-control" color="black">
+                            <form class="form" method="post">
+                                {% csrf_token %} {{ form.as_p }}
+                                <div class="tile-footer">
+                                    <div class="form-group">
+                                        <div class="col-md-8 col-md-offset-3">
+                                            <button class="btn btn-primary" type="submit">
+                                                <i class="fa fa-fw fa-lg fa-check-circle"></i>Register</button>&nbsp;&nbsp;
+                                            <a class="btn btn-primary" href="{% url 'login' %}">
+                                                <i class="fa fa-fw fa-lg fa-times-circle"></i>Cancel</a>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
+                            </form>
                         </div>
-                    </form>
-                </div>
+                    </fieldset>
+                </form>
             </div>
         </div>
     </div>
-
-</body>
+</div>
 
 </html>
-<!--   
+ 
                         <div>
                             <h3 class="tile-title">Listado de Usuarios</h3>
                             <div class="table-responsive">
@@ -110,6 +110,5 @@
             </div>
         </div>
     </div>
-     -->
-
+ 
 {% endblock %}
