--- a/master/templates/registration/registrar.html
+++ b/master/templates/registration/registrar.html
@@ -41,74 +41,18 @@
 </div>
 
 </html>
- 
-                        <div>
-                            <h3 class="tile-title">Listado de Usuarios</h3>
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>
-                                                <center>Nombre de Usuario</center>
-                                            </th>
-                                            <th>
-                                                <center>Nombre</center>
-                                            </th>
-                                            <th>
-                                                <center>Estado</center>
-                                            </th>
-                                            <th>
-                                                <center>Fecha de inicio</center>
-                                            </th>
-                                            <th>
-                                                <center>Fecha de termino</center>
-                                            </th>
-                                            <th>
-                                                <center>Acciones </center>
-                                            </th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for u in User %}
-                                        <tr>
-                                            <td>
-                                                <center>{{ u.username }}</center>
-                                            </td>
-                                            <td>
-                                                <center>{{ u.firs_name }}</center>
-                                            </td>
-                                            <td>
-                                                <center>{{ t.estadoTarea }}</center>
-                                            </td>
-                                            <td>
-                                                <center>{{ t.fechaInicio }}</center>
-                                            </td>
-                                            <td>
-                                                <center>{{ t.fechaTermino }}</center>
-                                            </td>
-                                            <td>
-                                                <center>
-                                                    <a href="{% url 'detalles_tarea' t.pk %}" class="btn btn-info">
-                                                        Detalles
-                                                    </a> /
-                                                    <a href="{% url 'editar_tarea' t.pk %}" class="btn btn-primary">
-                                                        Editar
-                                                    </a> /
-                                                    <a href="{% url 'eliminar_tarea' t.pk %}" class="btn btn-danger">
-                                                        Eliminar
-                                                    </a>
-                                                </center>
-                                            </td>
-                                        </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
+<div class="container">
+    <div class="rox">
+        <div class="col-md-12">
+            <div class="well">
+                <div form class="form-horizontal" method="get">
+                    <button class="btn btn-primary" type="submit">
+                        <a class="btn btn-primary" href="{% url 'UsuariosList' %}">Ver Usuarios</a>
+                            <a class="btn btn-primary" href="{% url 'registrar' %}">
+                            <i class="fa fa-fw fa-lg fa-times-circle"></i>Subir Documento</a>
                 </div>
-    
             </div>
         </div>
     </div>
- 
+</div>
 {% endblock %}
