--- a/master/templates/registroProfesor.html
+++ b/master/templates/registroProfesor.html
@@ -18,7 +18,7 @@
             <div class="well">
                 <form class="form-horizontal" method="post">
                     <fieldset>
-                        <legend class="text-center header">Registro Alumnos </legend>
+                        <legend class="text-center header">Registro Profesor</legend>
                         <div class="form-control" color="black">
                             <form class="form" method="post">
                                 {% csrf_token %} {{ form.as_p }}
@@ -26,9 +26,9 @@
                                     <div class="form-group">
                                         <div class="col-md-8 col-md-offset-3">
                                             <button class="btn btn-primary" type="submit">
-                                                <i class="fa fa-fw fa-lg fa-check-circle"></i>Register</button>&nbsp;&nbsp;
-                                                <a class="btn btn-primary" href="{% url 'registroAlumno' %}">
-                                                    <i class="fa fa-fw fa-lg fa-times-circle"></i>Cancel</a>
+                                                <i class="fa fa-fw fa-lg fa-check-circle"></i>Registrar</button>&nbsp;&nbsp;
+                                                <a class="btn btn-primary" href="{% url 'registroProfesor' %}">
+                                                    <i class="fa fa-fw fa-lg fa-times-circle"></i>Cancelar</a>
                                             </div>
                                     </div>
                                 </div>
@@ -36,6 +36,22 @@
                         </div>
                     </fieldset>
                 </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+</html>
+<div class="container">
+    <div class="rox">
+        <div class="col-md-12">
+            <div class="well">
+                <div form class="form-horizontal" method="get">
+                    <button class="btn btn-primary" type="submit">
+                        <a class="btn btn-primary" href="{% url 'DocenteList' %}">Ver Docentes</a>
+                            <a class="btn btn-primary" href="{% url 'registroProfesor' %}">
+                            <i class="fa fa-fw fa-lg fa-times-circle"></i>Subir Documento</a>
+                </div>
             </div>
         </div>
     </div>
