--- a/master/templates/usuariosList.html
+++ b/master/templates/usuariosList.html
@@ -26,8 +26,12 @@
             <td>{{ user.is_active}}</td>
             <td>{{ user.is_staff}}</td>
             <td>
-                <a class="btn btn-primary">Editar</a>
-                <a class="btn btn-primary">Eliminar</a>
+                <a href="{% url 'editar_usuario' user.pk %}" class="btn btn-success">
+                    Editar
+                </a>
+                <a href="{% url 'eliminar_usuario' user.pk%}" class="btn btn-danger">
+                    Eliminar
+                </a>
             </td>
         </tr>
         {% endfor %}
