--- a/master/templates/home.html
+++ b/master/templates/home.html
@@ -1,6 +1,19 @@
 {% extends 'base.html' %}
+{% block content %} 
+
+
+<!DOCTYPE html>
+<html>
 <body>
-        {% block content %} 
+
+
+ <!-- <img src="http://plataforma-u.com/new_img/trabajando.jpg" class="rounded mx-auto d-block" alt="Responsive image"> -->
+
+
 </body>
+</html>
+
+     
+        
 
 {% endblock content %}
