--- a/master/templates/base.html
+++ b/master/templates/base.html
@@ -1,198 +1,64 @@
-{% load staticfiles %} {% load static %}
-
-<html>
-
-  <head>
-    <title> Magister</title>
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="https://nave13.ucv.cl/imagen/favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    </head>
- 
-<body>
-    <nav class="navbar nav navbar-dark bg-primary" >
-
-        {% if user.is_authenticated %}
-    
-        <ul class="nav nav-pills navbar-left">
-            <li class="nav-item active">
-              <a href="{% url 'home' %}">Navegador Magister</a>
-            </li>
-        </ul> 
-
-        <ul class="nav nav-pills navbar-left">
-          <li class="nav-item active">
-            <a href="{% url 'home' %}"> Welcome {{ user.username }}</a>
-          </li>
-        </ul>
-
-        <ul class="nav nav-pills navbar-left">
-          <li class="nav-item active">
-            <a href="{% url 'upload' %}"> Subir Archivos</a>
-          </li>
-        </ul>
-    
-        
-        <ul class="nav nav-pills navbar-right">
-          <li class="nav-item active">
-            <a href="{% url 'login' %}" >Logout</a>
-          </li>
-        </ul>
-    
-        {% else %}
-        
-        <ul class="nav nav-pills navbar-right">
-          <li class="nav-item active">
-            <a href="{% url 'login' %}">Login</a>
-          </li>
-        </ul>
-    
-        {% endif %}
-    
-        {% if request.user.is_staff %}
-    
-        <ul class="nav nav-pills navbar-left">
-          <li class="nav-item active">
-            <a href="{% url 'registroAlumno' %}">Alumnos</a>
-          </li>
-        </ul>
-
-        <ul class="nav nav-pills navbar-left">
-            <li class="nav-item active">
-              <a href="{% url 'registrar' %}">Usuarios</a>
-            </li>
-          </ul>
-          <ul class="nav nav-pills navbar-left">
-            <li class="nav-item active">
-              <a href="{% url 'registroProfesor' %}">Docentes</a>
-            </li>
-        </ul>
-
-        <ul class="nav nav-pills navbar-left">
-            <li class="nav-item active">
-              <a href="">Reportes</a>
-            </li>
-        </ul>
-
-        <ul class="nav nav-pills navbar-left">
-            <li class="nav-item active">
-              <a href="">Búsqueda</a>
-            </li>
-        </ul>
-    
-        {% endif %}
-		
-
-{% block extrastatic %}
-{% endblock %}
-
-{% block content %} {% endblock %}
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" 
-			integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" 
-			crossorigin="anonymous">
-	</script>
-</body>
-</html>
-
-
-
-<!-- <!doctype html>
+{% load staticfiles %}
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <link href="jumbotron.css" rel="stylesheet">
   </head>
-
   <body>
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navegador Magister</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      {% if user.is_authenticated %}
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'home' %}">Welcome {{ user.username }} <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'upload' %}">Subir Archivo</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
+              <a class="nav-link" href="{% url 'login' %}" >Salida</a>
+            </li>
+      </ul>
+      {% endif %}
 
-    <main role="main">
+      {% if request.user.is_staff %}
 
-      <div class="jumbotron">
-        <div class="container">
-          <h1 class="display-3">Hello, world!</h1>
-          <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Administración
+          </a>
+          <div class="dropdown-menu" aria-labelled-by="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'registroAlumno' %}">Alumnos</a>
+            <a class="dropdown-item" href="{% url 'registroProfesor' %}">Profesores</a>
+            <a class="dropdown-item" href="{% url 'registrar' %}">Usuarios</a>
           </div>
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div>
-        </div>
+        </li>
+      </ul>
+      {% endif %}
+    
+  </div>
+</nav>
 
-        <hr>
-
-      </div> 
-
-    </main>
-
-    <footer class="container">
-      <p>&copy; Company 2017-2018</p>
-    </footer>
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+{% block content %} {% endblock %}
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   </body>
-</html> -->
+</html>
