--- a/master/templates/upload.html
+++ b/master/templates/upload.html
@@ -1,11 +1,34 @@
+{% extends "base.html" %}
+
+{% block content %}
 <html>
 <head>
  <title></title>
 </head>
 <body>
- <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
-            {{ form.as_p }}
-        <input type="submit" value="Submit">
-    </form>
-</body>
-</html>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="well">
+                <form class="form-horizontal" method="post">
+                    <fieldset>
+                        <legend class="text-center header">Subir Archivo</legend>
+                        <div class="form-control" color="black">
+                            <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+                                {{ form.as_p }}
+                                <div class="tile-footer">
+                                    <div class="form-group">
+                                        <div class="col-md-8 col-md-offset-3">
+                                            <input type="submit" value="Guardar">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
