detalles boton y views

--- a/master/templates/DocenteList.html
+++ b/master/templates/DocenteList.html
@@ -42,7 +42,7 @@
                 </tr>
                 {% endfor %}
                 {% else %}
-                <h1>No hay registros</h1>
+                <h1 aling="center">No hay registros</h1>
                 {% endif %}
             </tbody>
         </table>
