--- a/master/templates/alumnosList.html
+++ b/master/templates/alumnosList.html
@@ -38,14 +38,14 @@
                 </tr>
                 {% endfor %}
                 {% else %}
-                <h1>No hay registros</h1>
+                <h1 aling="center">No hay registros</h1>
                 {% endif %}
             </tbody>
         </table>
     </div>
 </div>
 <div class="container-fluid">
-<a href="{% url 'registroProfesor' %}" class="btn btn-primary">
+<a href="{% url 'registroAlumno' %}" class="btn btn-primary">
         Volver
 </a>
 </div>
