--- a/master/templates/registration/registrar.html
+++ b/master/templates/registration/registrar.html
@@ -23,9 +23,10 @@
                                 <div class="tile-footer">
                                     <div class="form-group">
                                         <div class="col-md-8 col-md-offset-3">
-                                            <button class="btn btn-primary" type="submit">
-                                                <i class="fa fa-fw fa-lg fa-check-circle"></i>Register</button>&nbsp;&nbsp;
-                                            <a class="btn btn-primary" href="{% url 'login' %}">
+                                            <button class="btn btn-primary" type="submit" onclick="alert('guardado')">
+                                                <i class="fa fa-fw fa-lg fa-check-circle"></i>Register</button>
+                                                <a class="btn btn-primary" href="{% url 'login' %}">
+                                                
                                                 <i class="fa fa-fw fa-lg fa-times-circle"></i>Cancel</a>
                                         </div>
                                     </div>
