--- a/master/templates/usuariosList.html
+++ b/master/templates/usuariosList.html
@@ -39,13 +39,13 @@
                 </tr>
                 {% endfor %}
                 {% else %}
-                <h1>No hay registros</h1>
+                <h1 aling="center">No hay registros</h1>
                 {% endif %}
         </table>
     </div>
  </div>
  <div class="container-fluid">
-        <a href="{% url 'registroProfesor' %}" class="btn btn-primary">
+        <a href="{% url 'registrar' %}" class="btn btn-primary">
                 Volver
         </a>
         </div>
