--- a/master/templates/DocenteList.html
+++ b/master/templates/DocenteList.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container-fluid">
     <div class="crow">
-        <table class="table table-bordered">
+        <table class="table table-bordered" id="tablaProfesores">
             <thead>
                 <tr>
                     <td>Nombre</td>
