--- a/master/templates/usuariosList.html
+++ b/master/templates/usuariosList.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block content %}
 
 <div class="container-fluid">
     <div class="crow">
-         <table class="table table-bordered">
+         <table class="table table-bordered" id="tablaUsuarios">
             <thead>
                 <tr>
                     <td>#</td>
