--- a/master/templates/base.html
+++ b/master/templates/base.html
@@ -11,6 +11,9 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
     crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.css"/>
+
+    
 
   </head>
   <body>
@@ -32,17 +35,16 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}" >Salida</a>
+              <a class="nav-link" href="{% url 'login' %}" >Salir</a>
             </li>
       </ul>
-      {% endif %}
 
       {% if request.user.is_staff %}
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Administración
+            Registrar
           </a>
           <div class="dropdown-menu" aria-labelled-by="navbarDropdown">
             <a class="dropdown-item" href="{% url 'registroAlumno' %}">Alumnos</a>
@@ -53,25 +55,39 @@
       </ul>
 
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Ver Listados
-            </a>
-            <div class="dropdown-menu" aria-labelled-by="navbarDropdown">
-              <a class="dropdown-item" href="{% url 'alumnosList' %}">Listado de Alumnos</a>
-              <a class="dropdown-item" href="{% url 'DocenteList' %}">Listado de Profesores</a>
-              <a class="dropdown-item" href="{% url 'UsuariosList' %}">Listado de Usuarios</a>
-            </div>
-          </li>
-        </ul>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Ver Listado
+          </a>
+          <div class="dropdown-menu" aria-labelled-by="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'alumnosList' %}">Listado de Alumnos</a>
+            <a class="dropdown-item" href="{% url 'DocenteList' %}">Listado de Profesores</a>
+            <a class="dropdown-item" href="{% url 'UsuariosList' %}">Listado de Usuarios</a>
+          </div>
+        </li>
+      </ul>
+
+      {% endif %}
+
       {% endif %}
     
   </div>
 </nav>
 
-{% block content %} {% endblock %}
+{% block content %} {% load staticfiles %}{% endblock %}
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+      <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.js"></script>
+
+<script>
+
+  $(document).ready(function() {
+    $('#tablaAlumnos').DataTable();
+    $('#tablaProfesores').DataTable();
+    $('#tablaUsuarios').DataTable();
+} );
+
+</script>
   </body>
 </html>
