--- a/master/templates/registration/login.html
+++ b/master/templates/registration/login.html
@@ -20,8 +20,7 @@
     </head>
 <body>
 
-    {% block content %}  
-        
+    {% block content %}     
         <div class="wrapper wrapper-full-page">
                 <div class="full-page login-page" data-color="blue">
                     <!--   you can change the color of the filter page using: data-color="blue | purple | green | orange | red | rose " -->
@@ -30,11 +29,11 @@
                             <div class="row">
                                 <div class="col-md-4 col-sm-6 col-md-offset-4 col-sm-offset-3">
         <form role="form" method="post" id='form_login'>
-            {% csrf_token %} 
+            {% csrf_token %}
              <div class="card card-login">
                 <div class="card-header text-center">
-                    <img src="https://nave13.ucv.cl/imagen/Logo-color(1).png" class="img-responsive" alt="Responsive image">
-                </div> 
+                    <img src="" class="img-responsive" alt="magister">
+                </div>
                 <div class="card-content">
                     <div class="input-group">
                         <span class="input-group-addon"> 
