--- a/master/templates/editar_docente.html
+++ b/master/templates/editar_docente.html
@@ -5,7 +5,7 @@
             <div class="well">
                 <form class="form-horizontal" method="post">
                     <fieldset>
-                        <legend class="text-center header">Registro Alumnos </legend>
+                        <legend class="text-center header">Editar Docente </legend>
                         <div class="form-control" color="black">
                             <form class="form" method="post">
                                 {% csrf_token %} {{ form.as_p }}
