--- a/master/templates/base.html
+++ b/master/templates/base.html
@@ -27,7 +27,7 @@
       {% if user.is_authenticated %}
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'home' %}">Welcome {{ user.username }} <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'perfil' %}">Perfil {{ user.username }} <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'upload' %}">Subir Archivo</a>
