--- a/master/templates/registration/login.html
+++ b/master/templates/registration/login.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -32,7 +32,7 @@
             {% csrf_token %}
              <div class="card card-login">
                 <div class="card-header text-center">
-                    <img src="" class="img-responsive" alt="magister">
+                    <img src="{% static 'img/user2.png' %}" class="img-responsive" alt="magister">
                 </div>
                 <div class="card-content">
                     <div class="input-group">
