--- a/master/templates/registroAlumno.html
+++ b/master/templates/registroAlumno.html
@@ -24,10 +24,8 @@
                                 <div class="tile-footer">
                                     <div class="form-group">
                                         <div class="col-md-8 col-md-offset-3">
-                                            <button class="btn btn-primary" type="submit">
-                                                <i class="fa fa-fw fa-lg fa-check-circle"></i>Register</button>&nbsp;&nbsp;
-                                                <a class="btn btn-primary" href="{% url 'registroAlumno' %}">
-                                                    <i class="fa fa-fw fa-lg fa-times-circle"></i>Cancel</a>
+                                            <button class="btn btn-primary" type="submit"  href="{% url 'registroAlumno' %}">Register</button>
+                                            <a class="btn btn-primary" href="{% url 'home' %}">Cancelar<span class="sr-only">(current)</span></a>
                                             </div>
                                     </div>
                                 </div>
