--- a/master/templates/upload.html
+++ b/master/templates/upload.html
@@ -20,7 +20,7 @@
                                 <div class="tile-footer">
                                     <div class="form-group">
                                         <div class="col-md-8 col-md-offset-3">
-                                            <button class="btn btn-primary" type="submit"  href="{% url 'upload' %}">Guardar</button>
+                                            <input type="submit" value="Guardar">
                                     </div>
                                 </div>
                             </form>
