--- a/master/templates/foto.html
+++ b/master/templates/foto.html
@@ -24,8 +24,8 @@
                                     <div class="form-group">
                                         <div class="col-md-8 col-md-offset-3">
                                             <button class="btn btn-primary" type="submit">
-                                                <i class="fa fa-fw fa-lg fa-check-circle"></i>Registrar</button>&nbsp;&nbsp;
-                                            <a class="btn btn-primary" href="{% url 'actualizarFoto' %}">
+                                                <i class="fa fa-fw fa-lg fa-check-circle"></i>Guardar</button>&nbsp;&nbsp;
+                                            <a class="btn btn-primary" href="{% url 'editardatos' %}">
                                                 <i class="fa fa-fw fa-lg fa-times-circle"></i>Cancelar</a>
                                         </div>
                                     </div>
