--- a/master/templates/home.html
+++ b/master/templates/home.html
@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<head>
+    <meta charset="utf-8">
+    <script src="{% static 'js/jquery-latest.js' %}"></script>
+    <script src="{% static 'js/arriba.js' %}"></script>
+    <title>Home</title>
+</head>
+
+<body>
+<span class="ir-arriba">&#x25b2;</span>
+
 
         <main>
             <section id="banner">
-<img src="{% static 'img/magister.jpg' %}">
                 <div class="contenedor">
                     <h2>Master's Project Aplicación Web</h2>
                     <p>Aprende, innova, investiga</p>
@@ -67,7 +76,7 @@
                     </div>
                     <div class="info-pet">
                         <img src="{% static 'img/logobueno.jpg' %}" alt="">
-                        <h4>Logo Master's Project</h4>
+                        <h4>Logo Master'sProject</h4>
                     </div>
                 </div>
             </section>
@@ -84,7 +93,6 @@
                 </div>
             </div>
         </footer>
-
 <link rel="stylesheet" type="text/css"> 
 <style type="text/css">
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
@@ -103,12 +111,24 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+.ir-arriba{
+    display: none;
+    padding: 10px;
+    background: #2369A8;
+    font-size: 20px;
+    color: #fff;
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 50px;
+}
+
 header {
     width: 100%;
     height: 50px;
     background: #333;
     color: #fff;
-    
     position: fixed;
     top: 0;
     left: 0;
@@ -199,7 +219,7 @@ footer .contenedor {
     margin-top: 5px;
     position: relative;
     color: #606C76;
-    background: #5A636B;
+    background: #41505E;
 }
 
 #banner img {
@@ -374,4 +394,9 @@ header label {
     }
 }
 </style>
+
+
+</body>
+
+
 {% endblock %}
