Atributos modificados Alumno

--- a/master/templates/perfil.html
+++ b/master/templates/perfil.html
@@ -128,11 +128,11 @@
 			<hr>
 				<h4 id="usuario"> Apellidos: {{ user.last_name }}</h4>
 			<hr>
-				<h4 id="usuario"> R.U.T: 12.345.632-5</h4>
+				<h4 id="usuario"> R.U.T: 17259331-3 </h4>
 			<hr>
-				<h4 id="usuario"> Email: {{ user.email }}</h4>
+				<h4 id="usuario"> Email: nadiatorresleyton@gmail.com</h4>
 			<hr>
-				<h4 id="usuario"> Teléfono: +569 99887766</h4>
+				<h4 id="usuario"> Teléfono: 983867509 </h4>
 			<hr>
 				<h3 style="text-align: center;" id="h3">Dirección Permanente <p><small> Ubicación </small></p></h3>
 			<hr>
