--- a/master/templates/base.html
+++ b/master/templates/base.html
@@ -60,7 +60,7 @@
             Ver Listado
           </a>
           <div class="dropdown-menu" aria-labelled-by="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'alumnosList' %}">Listado de Alumnos</a>
+            <a class="dropdown-item" href="{% url 'AlumnoList' %}">Listado de Alumnos</a>
             <a class="dropdown-item" href="{% url 'DocenteList' %}">Listado de Profesores</a>
             <a class="dropdown-item" href="{% url 'UsuariosList' %}">Listado de Usuarios</a>
           </div>
