--- a/master/templates/contacto.html
+++ b/master/templates/contacto.html
@@ -210,6 +210,7 @@ a:hover{
 
 h1{
 	font-size: 100px;
+	color: black;
 }
 
 h2{
@@ -219,6 +220,7 @@ h2{
 .texto p{
 	font-size: 40px;
 	font-weight: 300;
+	color: black;
 }
 
 </style>
