--- a/master/templates/perfil.html
+++ b/master/templates/perfil.html
@@ -19,7 +19,8 @@
 	<div class="row">
 		<div class="col-md-3">
 			<div class="col-md-12" aling="center">
-				<img class="img-responsive img-portfolio img-hover img-responsive" src="{{ user.userprofile.imagen.url }}">
+				<img class="img-responsive img-portfolio img-hover img-responsive" 
+				src="{{ user.userprofile.imagen.url }}">
 			</div>
 			<div class="col-md-12">
 				<br>
