--- a/master/templates/registroAlumno.html
+++ b/master/templates/registroAlumno.html
@@ -41,7 +41,7 @@
 <div class="container">
         <div form class="form-horizontal" method="get">
             <button class="btn btn-primary" type="submit">
-            <a class="btn btn-primary" href="{% url 'alumnosList' %}">Ver Alumnos</a>
+            <a class="btn btn-primary" href="{% url 'AlumnoList' %}">Ver Alumnos</a>
         </div>
 </div>
 
