--- a/master/templates/upload.html
+++ b/master/templates/upload.html
@@ -1,34 +1,22 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
 {% block content %}
-<html>
-<head>
- <title></title>
-</head>
 <body>
-
 <div class="container">
     <div class="row">
         <div class="col-md-12">
             <div class="well">
-                <form class="form-horizontal" method="post">
-                    <fieldset>
-                        <legend class="text-center header">Subir Archivo</legend>
-                        <div class="form-control" color="black">
-                            <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
-                                {{ form.as_p }}
-                                <div class="tile-footer">
-                                    <div class="form-group">
-                                        <div class="col-md-8 col-md-offset-3">
-                                            <input type="submit" value="Guardar">
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </fieldset>
+                <form action="" method="POST" enctype="multipart/form-data" class="upload">
+                <legend class="text-center header">Subir Archivo</legend>
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <div class="form-group">
+                        <input type="submit" value="Guardar" class="btn btn-primary btn-block">
+                    </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
+</body>
+
 {% endblock %}
